force-app/main/default/objects/Softrax_Order_Line__c/Softrax_Order_Line__c.object-meta.xml
<CustomObject>
    <description>The Softrax order sequence lines associated with a specific opportunity</description>
    <label>Softrax Order Line</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Softrax Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Softrax Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>