force-app/main/default/objects/Softrax_Order_Line__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Softrax Order Lines</relationshipLabel>
    <relationshipName>Softrax_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>