force-app/main/default/objects/Softrax_Order_Line__c/fields/Softrax_Order_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Softrax_Order_Line_Amount__c</fullName>
    <label>Softrax Order Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>