force-app/main/default/objects/Softrax_Order_Line__c/fields/Softrax_Order_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Softrax_Order_Sequence_Number__c</fullName>
    <label>Softrax Order Sequence Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>